src/objects/Aircraft_Base__c/Aircraft_Base__c.object-meta.xml
<CustomObject>
    <description>This object contains list of all the aircraft bases, city country and region.</description>
    <label>Aircraft Base ( Airport )</label>
    <nameField>
        <label>Aircraft Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Bases  ( Airports )</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>