src/objects/Aircraft_Base__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aircraft Bases  ( Airports )</relationshipLabel>
    <relationshipName>Aircraft_Bases_Airports</relationshipName>
    <type>Lookup</type>
</CustomField>