src/objects/Aircraft_Base__c/fields/AIRPORT_IATA_CD_ID_SQ__c.field-meta.xml
<CustomField>
    <fullName>AIRPORT_IATA_CD_ID_SQ__c</fullName>
    <description>BM 1/2/13 - Created for Services SFDC Interfaces Project. This field holds the IATA code from an external source. It will only have a value if the data originates outside of SFDC.</description>
    <inlineHelpText>This field holds the IATA code from an external source. It will only have a value if the data originates outside of SFDC.</inlineHelpText>
    <label>AIRPORT IATA CD ID SQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>