src/objects/Aircraft_Base__c/fields/Base_ICAO__c.field-meta.xml
<CustomField>
    <fullName>Base_ICAO__c</fullName>
    <label>Base ICAO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>