src/objects/Aircraft_Base__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific Rim</fullName>
            </value>
            <value>
                <fullName>Europe/MiddleEast/Africa/India</fullName>
            </value>
            <value>
                <fullName>UNMAPPED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>