src/objects/Aircraft_Base__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_City__c</columns>
    <columns>Base_ICAO__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>Base_IATA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>